# api/src/Fanoos.Application/Todos/ListTodos/ListTodosQueryHandler.cs
@@ -7,7 +7,8 @@ internal sealed class ListTodosQueryHandler(
     ITodoRepository todoRepository
 ) : IRequestHandler<ListTodosQuery, List<Todo>> {
     public async Task<List<Todo>> Handle(ListTodosQuery request, CancellationToken cancellationToken) {
-        List<Todo> todos = await todoRepository.ListAsync(cancellationToken);
+        List<Todo> todos = await todoRepository.ListAsync(request.IncludeArchived, cancellationToken);
+
         return todos;
     }
 }
