# api/src/Fanoos.Application/Todos/UpdateTodo/UpdateTodoCommandHandler.cs
@@ -1,24 +1,0 @@
-using ErrorOr;
-using Fanoos.Common.Data;
-using Fanoos.Domain.Todos;
-using MediatR;
-
-namespace Fanoos.Application.Todos.UpdateTodo;
-
-internal sealed class UpdateTodoCommandHandler(
-    ITodoRepository todoRepository,
-    IUnitOfWork unitOfWork
-) : IRequestHandler<UpdateTodoCommand, ErrorOr<Todo>> {
-    public async Task<ErrorOr<Todo>> Handle(UpdateTodoCommand request, CancellationToken cancellationToken) {
-        Todo? todo = await todoRepository.GetOneByIdAsync(request.Id, cancellationToken);
-
-        if (todo is null) return Error.NotFound(description: "Task was not found");
-
-        todo.UpdateTitle(request.RawTitle);
-
-        await todoRepository.UpdateAsync(todo, cancellationToken);
-        await unitOfWork.SaveChangesAsync(cancellationToken);
-
-        return todo;
-    }
-}
