# api/src/Fanoos.Presentation/Todos/Common/TodoResponse.cs
@@ -6,10 +6,11 @@ internal sealed record TodoResponse {
     public required string RawTitle { get; init; }
     public required string? Context { get; init; }
     public required string? Project { get; init; }
-    public required string? Time { get; init; }
+    public required int? Time { get; init; }
     public required string? Tag { get; init; }
     public required string? Energy { get; init; }
     public required bool IsImportant { get; init; }
     public required bool IsUrgent { get; init; }
     public required bool IsDone { get; init; }
+    public required bool IsArchived { get; init; }
 }
